--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.1.10",
     "@next/font": "^14.2.15",
     "axios": "^1.7.9",
+    "axios-hooks": "^5.0.2",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.4.7",
     "next": "^15.0.4",
@@ -27,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-modal-video": "^2.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5",
     "yet-another-react-lightbox": "^2.6.2"
